--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ install:
   - pip install git+https://github.com/OpenDreamKit/planetaryum.git
 script:
   - planetaryum static title="Analyse d'Algorithmes et Programmation" baseurl="https://github.com/defeo/M1-AlgoProg-notebooks/raw/master/%" binderurl="https://mybinder.org/v2/gh/defeo/M1-AlgoPRog-notebooks/master?filepath=%"
+  - touch _site/.nojekyll
 deploy:
   provider: pages
   local-dir: _site
